--- a/mandelbulber2/qt/image_save_dialog.ui
+++ b/mandelbulber2/qt/image_save_dialog.ui
@@ -28,8 +28,8 @@
        <rect>
         <x>0</x>
         <y>0</y>
-        <width>407</width>
-        <height>777</height>
+        <width>389</width>
+        <height>780</height>
        </rect>
       </property>
       <layout class="QVBoxLayout" name="verticalLayout_image">
@@ -312,10 +312,10 @@
             <property name="spacing">
              <number>2</number>
             </property>
-            <item row="1" column="0">
-             <widget class="QLabel" name="label_image_channel_optional">
+            <item row="5" column="2">
+             <widget class="MyLineEdit" name="text_diffuse_postfix">
               <property name="text">
-               <string>Image Channel</string>
+               <string/>
               </property>
              </widget>
             </item>
@@ -326,10 +326,57 @@
               </property>
              </widget>
             </item>
-            <item row="3" column="0">
-             <widget class="MyCheckBox" name="checkBox_specular_enabled">
+            <item row="1" column="1">
+             <widget class="QLabel" name="label_image_quality_optional">
               <property name="text">
-               <string>Specular</string>
+               <string>Quality</string>
+              </property>
+             </widget>
+            </item>
+            <item row="8" column="0">
+             <widget class="MyCheckBox" name="checkBox_gi_channel_enabled">
+              <property name="text">
+               <string>Global illumination</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="2">
+             <widget class="QLabel" name="label_image_postfix_optional">
+              <property name="text">
+               <string>Postfix</string>
+              </property>
+             </widget>
+            </item>
+            <item row="6" column="2">
+             <widget class="MyLineEdit" name="text_normalWorld_postfix">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="1">
+             <widget class="MyComboBox" name="comboBox_shadow_channel_quality">
+              <item>
+               <property name="text">
+                <string>8 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>16 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>32 bit</string>
+               </property>
+              </item>
+             </widget>
+            </item>
+            <item row="5" column="0">
+             <widget class="MyCheckBox" name="checkBox_diffuse_enabled">
+              <property name="text">
+               <string>Diffuse</string>
               </property>
              </widget>
             </item>
@@ -337,6 +384,41 @@
              <widget class="MyCheckBox" name="checkBox_normalWorld_enabled">
               <property name="text">
                <string>World Normal</string>
+              </property>
+             </widget>
+            </item>
+            <item row="3" column="0">
+             <widget class="MyCheckBox" name="checkBox_specular_enabled">
+              <property name="text">
+               <string>Specular</string>
+              </property>
+             </widget>
+            </item>
+            <item row="7" column="2">
+             <widget class="MyLineEdit" name="text_shadow_channel_postfix">
+              <property name="text">
+               <string/>
+              </property>
+             </widget>
+            </item>
+            <item row="4" column="0">
+             <widget class="MyCheckBox" name="checkBox_world_enabled">
+              <property name="text">
+               <string>World</string>
+              </property>
+             </widget>
+            </item>
+            <item row="1" column="0">
+             <widget class="QLabel" name="label_image_channel_optional">
+              <property name="text">
+               <string>Image Channel</string>
+              </property>
+             </widget>
+            </item>
+            <item row="2" column="2">
+             <widget class="MyLineEdit" name="text_normal_postfix">
+              <property name="text">
+               <string/>
               </property>
              </widget>
             </item>
@@ -366,17 +448,29 @@
               </property>
              </widget>
             </item>
-            <item row="3" column="2">
-             <widget class="MyLineEdit" name="text_specular_postfix">
-              <property name="text">
-               <string/>
-              </property>
+            <item row="3" column="1">
+             <widget class="MyComboBox" name="comboBox_specular_quality">
+              <item>
+               <property name="text">
+                <string>8 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>16 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>32 bit</string>
+               </property>
+              </item>
              </widget>
             </item>
-            <item row="1" column="2">
-             <widget class="QLabel" name="label_image_postfix_optional">
+            <item row="8" column="2">
+             <widget class="MyLineEdit" name="text_gi_channel_postfix">
               <property name="text">
-               <string>Postfix</string>
+               <string/>
               </property>
              </widget>
             </item>
@@ -387,22 +481,34 @@
               </property>
              </widget>
             </item>
-            <item row="1" column="1">
-             <widget class="QLabel" name="label_image_quality_optional">
-              <property name="text">
-               <string>Quality</string>
-              </property>
+            <item row="8" column="1">
+             <widget class="MyComboBox" name="comboBox_gi_channel_quality">
+              <item>
+               <property name="text">
+                <string>8 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>16 bit</string>
+               </property>
+              </item>
+              <item>
+               <property name="text">
+                <string>32 bit</string>
+               </property>
+              </item>
              </widget>
             </item>
-            <item row="5" column="2">
-             <widget class="MyLineEdit" name="text_diffuse_postfix">
+            <item row="3" column="2">
+             <widget class="MyLineEdit" name="text_specular_postfix">
               <property name="text">
                <string/>
               </property>
              </widget>
             </item>
-            <item row="6" column="1">
-             <widget class="MyComboBox" name="comboBox_normalWorld_quality">
+            <item row="2" column="1">
+             <widget class="MyComboBox" name="comboBox_normal_quality">
               <item>
                <property name="text">
                 <string>8 bit</string>
@@ -428,46 +534,6 @@ and will only be present after enabling and re-render.</string>
               </property>
              </widget>
             </item>
-            <item row="4" column="0">
-             <widget class="MyCheckBox" name="checkBox_world_enabled">
-              <property name="text">
-               <string>World</string>
-              </property>
-             </widget>
-            </item>
-            <item row="2" column="1">
-             <widget class="MyComboBox" name="comboBox_normal_quality">
-              <item>
-               <property name="text">
-                <string>8 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>16 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>32 bit</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-            <item row="6" column="2">
-             <widget class="MyLineEdit" name="text_normalWorld_postfix">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="5" column="0">
-             <widget class="MyCheckBox" name="checkBox_diffuse_enabled">
-              <property name="text">
-               <string>Diffuse</string>
-              </property>
-             </widget>
-            </item>
             <item row="5" column="1">
              <widget class="MyComboBox" name="comboBox_diffuse_quality">
               <item>
@@ -487,8 +553,8 @@ and will only be present after enabling and re-render.</string>
               </item>
              </widget>
             </item>
-            <item row="3" column="1">
-             <widget class="MyComboBox" name="comboBox_specular_quality">
+            <item row="6" column="1">
+             <widget class="MyComboBox" name="comboBox_normalWorld_quality">
               <item>
                <property name="text">
                 <string>8 bit</string>
@@ -506,22 +572,15 @@ and will only be present after enabling and re-render.</string>
               </item>
              </widget>
             </item>
-            <item row="2" column="2">
-             <widget class="MyLineEdit" name="text_normal_postfix">
+            <item row="9" column="0">
+             <widget class="MyCheckBox" name="checkBox_not_denoised_channel_enabled">
               <property name="text">
-               <string/>
+               <string>Not denoised</string>
               </property>
              </widget>
             </item>
-            <item row="8" column="0">
-             <widget class="MyCheckBox" name="checkBox_gi_channel_enabled">
-              <property name="text">
-               <string>Global illumination</string>
-              </property>
-             </widget>
-            </item>
-            <item row="7" column="1">
-             <widget class="MyComboBox" name="comboBox_shadow_channel_quality">
+            <item row="9" column="1">
+             <widget class="MyComboBox" name="comboBox_not_denoised_channel_quality">
               <item>
                <property name="text">
                 <string>8 bit</string>
@@ -539,34 +598,8 @@ and will only be present after enabling and re-render.</string>
               </item>
              </widget>
             </item>
-            <item row="8" column="1">
-             <widget class="MyComboBox" name="comboBox_gi_channel_quality">
-              <item>
-               <property name="text">
-                <string>8 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>16 bit</string>
-               </property>
-              </item>
-              <item>
-               <property name="text">
-                <string>32 bit</string>
-               </property>
-              </item>
-             </widget>
-            </item>
-            <item row="7" column="2">
-             <widget class="MyLineEdit" name="text_shadow_channel_postfix">
-              <property name="text">
-               <string/>
-              </property>
-             </widget>
-            </item>
-            <item row="8" column="2">
-             <widget class="MyLineEdit" name="text_gi_channel_postfix">
+            <item row="9" column="2">
+             <widget class="MyLineEdit" name="text_not_denoised_channel_postfix">
               <property name="text">
                <string/>
               </property>
