--- a/mandelbulber2/qt/preferences_dialog.ui
+++ b/mandelbulber2/qt/preferences_dialog.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>661</width>
-    <height>818</height>
+    <width>658</width>
+    <height>942</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -54,8 +54,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>619</width>
-            <height>793</height>
+            <width>637</width>
+            <height>807</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_general">
@@ -740,8 +740,8 @@
            <rect>
             <x>0</x>
             <y>0</y>
-            <width>619</width>
-            <height>828</height>
+            <width>634</width>
+            <height>862</height>
            </rect>
           </property>
           <layout class="QVBoxLayout" name="verticalLayout_image">
@@ -1031,46 +1031,6 @@
                   </property>
                  </widget>
                 </item>
-                <item row="7" column="0">
-                 <widget class="MyCheckBox" name="checkBox_shadow_channel_enabled">
-                  <property name="text">
-                   <string>Shadows</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="8" column="0">
-                 <widget class="MyCheckBox" name="checkBox_gi_channel_enabled">
-                  <property name="text">
-                   <string>Global illumination</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="5" column="1">
-                 <widget class="MyComboBox" name="comboBox_diffuse_quality">
-                  <item>
-                   <property name="text">
-                    <string>8 bit</string>
-                   </property>
-                  </item>
-                  <item>
-                   <property name="text">
-                    <string>16 bit</string>
-                   </property>
-                  </item>
-                  <item>
-                   <property name="text">
-                    <string>32 bit</string>
-                   </property>
-                  </item>
-                 </widget>
-                </item>
-                <item row="7" column="2">
-                 <widget class="MyLineEdit" name="text_shadow_channel_postfix">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
                 <item row="2" column="1">
                  <widget class="MyComboBox" name="comboBox_normal_quality">
                   <item>
@@ -1090,10 +1050,25 @@
                   </item>
                  </widget>
                 </item>
+                <item row="0" column="0" colspan="3">
+                 <widget class="QLabel" name="label_rerender_required_info">
+                  <property name="text">
+                   <string>Following channels are only rendered on demand
+and will only be present after enabling and re-render.</string>
+                  </property>
+                 </widget>
+                </item>
                 <item row="4" column="0">
                  <widget class="MyCheckBox" name="checkBox_world_enabled">
                   <property name="text">
                    <string>World</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="9" column="0">
+                 <widget class="MyCheckBox" name="checkBox_not_denoised_channel_enabled">
+                  <property name="text">
+                   <string>Not denoised</string>
                   </property>
                  </widget>
                 </item>
@@ -1104,36 +1079,22 @@
                   </property>
                  </widget>
                 </item>
-                <item row="3" column="2">
-                 <widget class="MyLineEdit" name="text_specular_postfix">
+                <item row="8" column="0">
+                 <widget class="MyCheckBox" name="checkBox_gi_channel_enabled">
                   <property name="text">
-                   <string/>
+                   <string>Global illumination</string>
                   </property>
                  </widget>
                 </item>
-                <item row="4" column="2">
-                 <widget class="MyLineEdit" name="text_world_postfix">
+                <item row="1" column="1">
+                 <widget class="QLabel" name="label_image_quality_optional">
                   <property name="text">
-                   <string/>
+                   <string>Quality</string>
                   </property>
                  </widget>
                 </item>
-                <item row="6" column="0">
-                 <widget class="MyCheckBox" name="checkBox_normalWorld_enabled">
-                  <property name="text">
-                   <string>World Normal</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="1" column="2">
-                 <widget class="QLabel" name="label_image_postfix_optional">
-                  <property name="text">
-                   <string>Postfix</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="3" column="1">
-                 <widget class="MyComboBox" name="comboBox_specular_quality">
+                <item row="6" column="1">
+                 <widget class="MyComboBox" name="comboBox_normalWorld_quality">
                   <item>
                    <property name="text">
                     <string>8 bit</string>
@@ -1149,6 +1110,13 @@
                     <string>32 bit</string>
                    </property>
                   </item>
+                 </widget>
+                </item>
+                <item row="2" column="0">
+                 <widget class="MyCheckBox" name="checkBox_normal_enabled">
+                  <property name="text">
+                   <string>Surface Normal</string>
+                  </property>
                  </widget>
                 </item>
                 <item row="4" column="1">
@@ -1189,23 +1157,8 @@
                   </item>
                  </widget>
                 </item>
-                <item row="1" column="1">
-                 <widget class="QLabel" name="label_image_quality_optional">
-                  <property name="text">
-                   <string>Quality</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="0" column="0" colspan="3">
-                 <widget class="QLabel" name="label_rerender_required_info">
-                  <property name="text">
-                   <string>Following channels are only rendered on demand
-and will only be present after enabling and re-render.</string>
-                  </property>
-                 </widget>
-                </item>
-                <item row="6" column="1">
-                 <widget class="MyComboBox" name="comboBox_normalWorld_quality">
+                <item row="9" column="1">
+                 <widget class="MyComboBox" name="comboBox_not_denoised_channel_quality">
                   <item>
                    <property name="text">
                     <string>8 bit</string>
@@ -1223,15 +1176,15 @@ and will only be present after enabling and re-render.</string>
                   </item>
                  </widget>
                 </item>
-                <item row="2" column="0">
-                 <widget class="MyCheckBox" name="checkBox_normal_enabled">
+                <item row="3" column="2">
+                 <widget class="MyLineEdit" name="text_specular_postfix">
                   <property name="text">
-                   <string>Surface Normal</string>
+                   <string/>
                   </property>
                  </widget>
                 </item>
-                <item row="2" column="2">
-                 <widget class="MyLineEdit" name="text_normal_postfix">
+                <item row="4" column="2">
+                 <widget class="MyLineEdit" name="text_world_postfix">
                   <property name="text">
                    <string/>
                   </property>
@@ -1241,6 +1194,100 @@ and will only be present after enabling and re-render.</string>
                  <widget class="MyCheckBox" name="checkBox_specular_enabled">
                   <property name="text">
                    <string>Specular</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="2">
+                 <widget class="MyLineEdit" name="text_diffuse_postfix">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item row="5" column="1">
+                 <widget class="MyComboBox" name="comboBox_diffuse_quality">
+                  <item>
+                   <property name="text">
+                    <string>8 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>16 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>32 bit</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="7" column="2">
+                 <widget class="MyLineEdit" name="text_shadow_channel_postfix">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item row="6" column="2">
+                 <widget class="MyLineEdit" name="text_normalWorld_postfix">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item row="1" column="2">
+                 <widget class="QLabel" name="label_image_postfix_optional">
+                  <property name="text">
+                   <string>Postfix</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="6" column="0">
+                 <widget class="MyCheckBox" name="checkBox_normalWorld_enabled">
+                  <property name="text">
+                   <string>World Normal</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="8" column="2">
+                 <widget class="MyLineEdit" name="text_gi_channel_postfix">
+                  <property name="text">
+                   <string/>
+                  </property>
+                 </widget>
+                </item>
+                <item row="7" column="0">
+                 <widget class="MyCheckBox" name="checkBox_shadow_channel_enabled">
+                  <property name="text">
+                   <string>Shadows</string>
+                  </property>
+                 </widget>
+                </item>
+                <item row="3" column="1">
+                 <widget class="MyComboBox" name="comboBox_specular_quality">
+                  <item>
+                   <property name="text">
+                    <string>8 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>16 bit</string>
+                   </property>
+                  </item>
+                  <item>
+                   <property name="text">
+                    <string>32 bit</string>
+                   </property>
+                  </item>
+                 </widget>
+                </item>
+                <item row="2" column="2">
+                 <widget class="MyLineEdit" name="text_normal_postfix">
+                  <property name="text">
+                   <string/>
                   </property>
                  </widget>
                 </item>
@@ -1263,22 +1310,8 @@ and will only be present after enabling and re-render.</string>
                   </item>
                  </widget>
                 </item>
-                <item row="5" column="2">
-                 <widget class="MyLineEdit" name="text_diffuse_postfix">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item row="8" column="2">
-                 <widget class="MyLineEdit" name="text_gi_channel_postfix">
-                  <property name="text">
-                   <string/>
-                  </property>
-                 </widget>
-                </item>
-                <item row="6" column="2">
-                 <widget class="MyLineEdit" name="text_normalWorld_postfix">
+                <item row="9" column="2">
+                 <widget class="MyLineEdit" name="text_not_denoised_channel_postfix">
                   <property name="text">
                    <string/>
                   </property>
